--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -22,12 +22,12 @@ jobs:
         with:
           python-version: "${{ matrix.python-version }}"
       - name: "Install dependencies"
-        run: "scripts/install"
+        run: "scripts/install.sh"
       - name: "Run linting checks"
-        run: "scripts/check"
+        run: "scripts/check.sh"
       - name: "Build package & docs"
-        run: "scripts/build"
+        run: "scripts/build.sh"
       - name: "Run tests"
-        run: "scripts/test"
+        run: "scripts/test.sh"
       - name: "Enforce coverage"
-        run: "scripts/coverage"
+        run: "scripts/coverage.sh"
