--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,11 +17,11 @@ jobs:
         with:
           python-version: 3.8
       - name: "Install dependencies"
-        run: "scripts/install"
+        run: "scripts/install.sh"
       - name: "Build package & docs"
-        run: "scripts/build"
+        run: "scripts/build.sh"
       - name: "Publish to PyPI & deploy docs"
-        run: "scripts/publish"
+        run: "scripts/publish.sh"
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
