--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,8 @@ combine_as_imports = True
 
 [tool:pytest]
 addopts = -rxXs
+markers =
+  copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
 
 [coverage:run]
 omit = venv/*
