--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,13 @@ edit_uri: ""
 
 nav:
     - Introduction: 'index.md'
+    - Quickstart: 'quickstart.md'
+    - API: 'api.md'
 
 markdown_extensions:
+  - admonition
+  - pymdownx.highlight:
+        linenums: true
+        
+  - pymdownx.superfences
   - mkautodoc
