--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -6,7 +6,7 @@ on:
     branches: 
       - '*'
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
 
 jobs:
   tests:
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        python-version: ["3.7", "3.8", "3.9"]
 
     steps:
       - uses: "actions/checkout@v2"
